--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas
 numpy
-streamlit
+streamlit==1.1.0
 matplotlib
 koreanize_matplotlib
 Proj
@@ -9,6 +9,6 @@ folium
 pyproj
 
 seaborn
-plotly
+plotly==5.1.0
 cufflinks
 json
