--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas
 numpy
-streamlit==1.1.0
+streamlit
 matplotlib
 koreanize_matplotlib
 Proj
@@ -9,6 +9,6 @@ folium
 pyproj
 
 seaborn
-plotly==5.1.0
+plotly
 cufflinks
 json
